amazon-sqs/5.5/modules/ROOT/pages/amazon-sqs-connector-reference.adoc
= Amazon SQS Connector Reference - Mule 4
:page-aliases: connectors::amazon/amazon-sqs-connector-reference.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Amazon SQS Connector v5.5

Release Notes: xref:release-notes::connector/amazon-sqs-connector-release-notes-mule-4.adoc[Amazon SQS Connector Release Notes]

== Configurations
---
[[config]]
=== Default Configuration

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_basic, Basic>>
* <<config_role, Role>>
 | The connection types to provide to this configuration. | | x
| Default Global Queue URL a| String |  |  |
| Expiration Policy a| <<ExpirationPolicy>> | Configures the minimum amount of time that a dynamic configuration instance can remain idle before Mule considers it eligible for expiration. This does not mean that the instance expires at the exact moment that it becomes eligible. Mule purges the instances as appropriate. |  |
|===

==== Connection Types
[[config_basic]]
===== Basic


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Session Token a| String |  The session token provided by AWS Security Token Service (STS). |  |
| Test Queue ARN a| String |  |  |
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 |
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  |
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 |
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to `true` to obtain credentials from the AWS environment. See the Amazon https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html[Credentials] topic. |  false |
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Host a| String |  The optional proxy host. |  |
| Port a| Number |  The optional proxy port. |  |
| Username a| String |  The optional proxy username. |  |
| Password a| String |  The optional proxy password. |  |
| Domain a| String |  The optional proxy domain. |  |
| Workstation a| String |  The optional proxy workstation. |  |
|===
[[config_role]]
===== Role


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Role ARN a| String |  The Role ARN uniquely identifies role to assume to gain cross account access. |  | x
| Test Queue ARN a| String |  |  |
| Connection Timeout a| Number |  The amount of time to wait (in milliseconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended. |  50000 |
| Max Connections a| Number |  Sets the maximum number of allowed open HTTP connections. |  |
| Socket Timeout a| Number |  The amount of time to wait (in milliseconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended. |  50000 |
| Access Key a| String |  The access key provided by Amazon. |  | x
| Secret Key a| String |  The secret key provided by Amazon. |  | x
| Try Default AWSCredentials Provider Chain a| Boolean |  Set this field to `true` to obtain credentials from the AWS environment. See the Amazon https://docs.aws.amazon.com/sdk-for-java/v2/developer-guide/credentials.html[Credentials] topic. |  false |
| Region Endpoint a| String |  Set the topic region endpoint. |  US_EAST_1 |
| TLS Configuration a| <<Tls>> |  |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Host a| String |  The optional proxy host. |  |
| Port a| Number |  The optional proxy port. |  |
| Username a| String |  The optional proxy username. |  |
| Password a| String |  The optional proxy password. |  |
| Domain a| String |  The optional proxy domain. |  |
| Workstation a| String |  The optional proxy workstation. |  |
|===

== Operations

* <<addPermission>>
* <<changeMessageVisibility>>
* <<changeMessageVisibilityBatch>>
* <<createQueue>>
* <<deleteMessage>>
* <<deleteMessageBatch>>
* <<deleteQueue>>
* <<getApproximateNumberOfMessages>>
* <<getQueueAttributes>>
* <<getQueueUrl>>
* <<listDeadLetterSourceQueues>>
* <<listQueues>>
* <<purgeQueue>>
* <<read>>
* <<removePermission>>
* <<sendMessage>>
* <<sendMessageBatch>>
* <<setQueueAttributes>>


[[addPermission]]
=== Add Permission
`<sqs:add-permission>`


Adds a permission to this message queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Label a| String |  A name for this permission |  | x
| Account Ids a| Array of String |  The AWS account ID's for the account to share this queue with. |  | x
| Actions a| Array of String |  A list to indicate how much to share (SendMessage, ReceiveMessage, ChangeMessageVisibility, DeleteMessage, GetQueueAttributes) |  | x
| Queue Url a| String |  Permissions will be added to the queue represented by this URL. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[changeMessageVisibility]]
=== Change Message Visibility
`<sqs:change-message-visibility>`


Changes the visibility timeout of a specified message in a queue to a new value. The maximum allowed timeout value you can set the value to is 12 hours. This means you can't extend the timeout of a message in an existing queue to more than a total visibility timeout of 12 hours.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Receipt Handle a| String |  The receipt handle associated with the message whose visibility timeout should be changed. |  #[header:inbound:sqs.message.receipt.handle] |
| Visibility Timeout a| Number |  The new value (in seconds - from 0 to 43200 - maximum 12 hours) for the message's visibility timeout. |  | x
| Queue Url a| String |  The URL of the Amazon SQS queue to take action on. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[changeMessageVisibilityBatch]]
=== Change Message Visibility Batch
`<sqs:change-message-visibility-batch>`


Changes the visibility timeout of multiple messages. This is a batch version of ChangeMessageVisibility. The result of the action on each message is reported individually in the response. You can send up to 10 ChangeMessageVisibility requests with each ChangeMessageVisibilityBatch action.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Receipt Handles a| Array of <<ChangeMessageVisibilityBatchRequestEntry>> |  A list of receipt handles of the messages for which the visibility timeout must be changed. |  `#[payload]` |
| Queue Url a| String |  The URL of the Amazon SQS queue to take action on. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[createQueue]]
=== Create Queue
`<sqs:create-queue>`

Creates a new queue, or returns the URL of an existing one.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Name a| String |  The name for the queue to be created. |  | x
| Attributes a| Object |  A map of attributes with their corresponding values.

Valid map keys:

* `ApproximateNumberOfMessages`
* `ApproximateNumberOfMessagesDelayed`
* `ApproximateNumberOfMessagesNotVisible`
* `CreatedTimestamp`
* `DelaySeconds`
* `LastModifiedTimestamp`
* `MaximumMessageSize`
* `MessageRetentionPeriod`
* `Policy`
* `QueueArn`
* `ReceiveMessageWaitTimeSeconds`
* `RedrivePolicy`
* `VisibilityTimeout` |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[deleteMessage]]
=== Delete Message
`<sqs:delete-message>`

Deletes the message identified by message object on the queue this object represents.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Receipt Handle a| String |  Receipt handle of the message to be deleted |  | x
| Queue Url a| String |  The URL of the queue to delete messages from. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[deleteMessageBatch]]
=== Delete Message Batch
`<sqs:delete-message-batch>`


Deletes up to ten messages from the specified queue. This is a batch version of DeleteMessage.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Entries a| Array of <<DeleteMessageBatchRequestEntry>> |  A list of receipt handles for the messages to be deleted. |  | x
| Queue Url a| String |  The URL of the queue to delete messages as a batch from. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[deleteQueue]]
=== Delete Queue
`<sqs:delete-queue>`


Deletes the message queue represented by this object. Will delete a non-empty queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  The URL of the queue to delete. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[getApproximateNumberOfMessages]]
=== Get Approximate Number Of Messages
`<sqs:get-approximate-number-of-messages>`


Gets an approximate number of visible messages for a queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  The URL of the queue. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Number
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[getQueueAttributes]]
=== Get Queue Attributes
`<sqs:get-queue-attributes>`


Gets queue attributes. This is provided to expose the underlying functionality.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Attribute Names a| Array of String |  A list of attribute retrieve information for. |  |
| Queue Url a| String |  The URL of the Amazon SQS queue to take action on. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Object
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[getQueueUrl]]
=== Get Queue URL
`<sqs:get-queue-url>`


Returns the URL of an existing queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Name a| String |  The name of the queue whose URL must be fetched. |  | x
| Queue Owner AWS Account Id a| String |  The AWS account ID of the owner that created the queue. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| <<RequestIDAttribute>>
|===

====For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY

[[listDeadLetterSourceQueues]]
=== List Dead Letter Source Queues
`<sqs:list-dead-letter-source-queues>`

Returns a list of your queues that have the RedrivePolicy queue attribute configured with a dead letter queue.

==== Parameters
[cols=".^20%,.^20%,.^35%,.^20%,^.^5%", options="header"]
|======================
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | *x*
| Queue Url a| String |  The queue URL of a dead letter queue. |  |
| Target Variable a| String |  The name of a variable on which the operation's output will be placed |  |
| Target Value a| String |  An expression that will be evaluated against the operation's output and the outcome of that expression will be stored in the target variable. |  #[payload] | {nbsp}
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|======================

==== Output
[cols=".^50%,.^50%"]
|======================
| *Type* a| Array of String
| *Attributes Type* a| <<RequestIDAttribute>>
|======================

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY

[[listQueues]]
=== List Queues
`<sqs:list-queues>`

Returns a list of your queues. The maximum number of queues that can be returned is 1000.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Name Prefix a| String |  A string to use for filtering the list results. Only those queues whose name begins with the specified string are returned. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of String
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[purgeQueue]]
=== Purge Queue
`<sqs:purge-queue>`


Deletes the messages in a queue specified by the queue URL.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  The queue URL where messages are to be fetched from. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[read]]
=== Read
`<sqs:read>`


Reads a number of messages from a queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Queue Url a| String |  The Queue URL. |  | x
| Max Number Of Messages a| Number |  The maximum number of messages to read. The connector never returns more messages than the number specified, however, fewer messages might be returned. Only values between 1-10 are allowed. | 1 | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |Array of <<Message>>
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[removePermission]]
=== Remove Permission
`<sqs:remove-permission>`


Removes a permission from this message queue.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Label a| String |  A name for the permission to be removed. |  | x
| Queue Url a| String |  Permissions will be deleted from the queue represented by this URL. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[sendMessage]]
=== Send Message
`<sqs:send-message>`


Sends a message to a specified queue. The message must be between 1 and 256K bytes long.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Message a| <<Message>> |  The message to send. |  `#[payload]` |
| Queue Url a| String |  The queue where the message is to be sent. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SendMessageResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[sendMessageBatch]]
=== Send Message Batch
`<sqs:send-message-batch>`


Delivers up to ten messages to the specified queue. This is a batch version of SendMessage


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Messages a| Array of <<Message>> |  A list of SendMessageBatchRequestEntry items. |  `#[payload]` |
| Queue Url a| String |  The queue where the message is to be sent. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<BatchResult>>
| Attributes Type a| <<RequestIDAttribute>>
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY


[[setQueueAttributes]]
=== Set Queue Attributes
`<sqs:set-queue-attributes>`


Sets the value of one or more queue attributes. When you change a queue's attributes, the change can take up to 60 seconds for most of the attributes to propagate throughout the SQS system. Changes made to the MessageRetentionPeriod attribute can take up to 15 minutes.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Attributes a| Object |  A map of attributes to set. |  `#[payload]` |
| Queue Url a| String |  The URL of the queue. |  | x
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable. |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
|===

==== For Configurations
* <<config>>

==== Throws
* SQS:RETRY_EXHAUSTED
* SQS:CONNECTIVITY

== Sources

* Receive Messages

[[receiveMessages]]
=== Receive messages
`<sqs:receivemessages>`

==== Parameters
[%header,cols="20s,25a,30a,15a,10a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Visibility Timeout a| Number |  |  30 |
| Preserve Messages a| Boolean |  |  false |
| Number Of Messages a| Number | The maximum number of messages to read. The connector never returns more messages than the number specified, however, fewer messages might be returned. Only values between 1-10 are allowed. |  1 |
| Queue Url a| String |  |  |
| Primary Node Only a| Boolean |  Whether this source should only execute on the primary node when in a cluster. |  |
| Redelivery Policy a| <<RedeliveryPolicy>> |  Defines a policy for processing the redelivery of the same message. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |String
| Attributes Type a| String
|===

==== For Configurations
* <<config>>

== Types

[[Tls]]
=== TLS

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Enabled Protocols a| String | A comma-separated list of protocols enabled for this context. |  |
| Enabled Cipher Suites a| String | A comma-separated list of cipher suites enabled for this context. |  |
| Trust Store a| <<TrustStore>> | For servers, a trust store contains certificates of the trusted clients. For clients, a trust store contains certificates of the trusted servers.  |  |
| Key Store a| <<KeyStore>> | For servers, a key store contains the private and public key of the server. For clients, a key store contains the private and public key of the client. |  |
| Revocation Check a| * <<standard-revocation-check>>
* <<custom-ocsp-responder>>
* <<crl-file>> | Validates that a certificate was revoked. |  |
|======================

[[TrustStore]]
=== Trust Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the trust store. The path is resolved relative to the current classpath and file system, if possible. |  |
| Password a| String | The password used to protect the trust store. |  |
| Type a| String | The type of store used. |  |
| Algorithm a| String | The algorithm used by the trust store. |  |
| Insecure a| Boolean | If `true`, no certificate validations are performed, which makes connections vulnerable to attacks. Use at your own risk. |  |
|======================

[[KeyStore]]
=== Key Store

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The location of the key store. The path is resolved relative to the current classpath and file system, if possible. |  |
| Type a| String | The type of store used. |  |
| Alias a| String | The alias of the key to use when the key store contains multiple private keys. If not defined, the first key in the file is used by default. |  |
| Key Password a| String | The password used to protect the private key. |  |
| Password a| String | The password used to protect the key store. |  |
| Algorithm a| String | The algorithm used by the key store. |  |
|======================

[[standard-revocation-check]]
=== Standard Revocation Check

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Only End Entities a| Boolean | Only verify the last element of the certificate chain. |  |
| Prefer Crls a| Boolean | Try CRL instead of OCSP first. |  |
| No Fallback a| Boolean | Do not use the secondary checking method, which is the method not specified in the Prefer Crls field. |  |
| Soft Fail a| Boolean | Avoids verification failure when the revocation server cannot be reached or is busy. |  |
|======================

[[custom-ocsp-responder]]
=== Custom OCSP Responder

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Url a| String | The URL of the OCSP responder. |  |
| Cert Alias a| String | The alias of the signing certificate for the OCSP response, if present. The alias must be in the trust store. |  |
|======================

[[crl-file]]
=== CRL File

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Path a| String | The path to the CRL file. |  |
|======================
[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often to reconnect (in milliseconds). | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If false, the reconnection strategy runs in a separate, non-blocking thread. |true |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance should be allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** DAYS
** HOURS
** MICROSECONDS
** MILLISECONDS
** MINUTES
** NANOSECONDS
** SECONDS
| A time unit that qualifies the maxIdleTime attribute |  |
|===

[[RedeliveryPolicy]]
=== Redelivery Policy

[%header,cols="20s,20a,35a,20a,5a"]
|===
| Field | Type | Description | Default Value | Required
| Max Redelivery Count a| Number | The maximum number of times a message can be redelivered and processed unsuccessfully before triggering a process-failed-message. |  |
| Use Secure Hash a| Boolean | Whether to use a secure hash algorithm to identify a redelivered message. |  |
| Message Digest Algorithm a| String | The secure hashing algorithm to use. If not set, the default is SHA-256. |  |
| Id Expression a| String | Defines one or more expressions to use to determine when a message has been redelivered. This property may only be set if useSecureHash is false. |  |
| Object Store a| Object Store | The object store where the redelivery counter for each message is going to be stored. |  |
|===

[[BatchResult]]
=== Batch Result

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Failed a| Array of <<BatchResultErrorEntry,BatchResultErrorEntry>> | A list of Batch Result Error Entry items. |  |
| Successful a| Array of String | A list of <<ChangeMessageVisibilityBatchRequestEntry,Change Message Visibility Batch Request Entry>> items. |  |
|======================

[[BatchResultErrorEntry]]
=== Batch Result Error Entry

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Code a| String | An error code that represents why the action failed on this entry. |  |
| Id a| String | The ID of an entry in a batch request. |  |
| Message a| String | A message that explains why the action failed on this entry. |  |
| Sender Fault a| Boolean | Indicates whether the error occurred due to the producer. |  |
|======================

[[RequestIDAttribute]]
=== Request ID Attribute

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Request Id a| String |  |  |
|======================

[[ChangeMessageVisibilityBatchRequestEntry]]
=== Change Message Visibility Batch Request Entry

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Id a| String | An ID for the receipt handle. This ID is used to communicate the result of this request.  |  |
| Receipt Handle a| String | The receipt handle for this entry. |  |
| Visibility Timeout a| Number | The new value, in seconds, for the message visibility timeout. |  |
|======================

[[DeleteMessageBatchRequestEntry]]
=== Delete Message Batch Request Entry

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Id a| String | An ID for the receipt handle. This ID is used to communicate the result of this request.  |  |
| Receipt Handle a| String | The receipt handle for this entry. |  |
|======================

[[Message]]
=== Message

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| Body a| String | The message body to send. |  |
| Delay Seconds a| Number |  The number of seconds for which to delay a specific message. Valid values are 0 through 900. |  |
| Group Id a| String | The group in the FIFO queue to which this message belongs. |  |
| Id a| String |  |  |
| Message Attributes a| Object | A map of typed key-value pairs to send as message attributes. You must specify a value, key, and data type for each entry. |  |
| Receipt Handle a| String | The receipt handle for this entry. |  |
|======================

[[SendMessageResult]]
=== Send Message Result

[cols=".^20%,.^25%,.^30%,.^15%,.^10%", options="header"]
|======================
| Field | Type | Description | Default Value | Required
| MD5 Of Message Attributes a| String | An MD5 digest of the non-URL-encoded message attribute string. You can use this digest to verify that Amazon SQS received the message correctly. Amazon SQS decodes the message URL before it creates the MD5 digest. For information about MD5, see http://www.faqs.org/rfcs/rfc1321.html[RFC 1321 - The MD5 Message-Digest Algorithm]. |  |
| MD5 Of Message Body a| String | An MD5 digest of the non-URL-encoded message body string. You can use this digest to verify that Amazon SQS received the message correctly. Amazon SQS decodes the message URL before it creates the MD5 digest. |  |
| Message Id a| String | An element containing the message ID of the message sent to the queue. For more information, see http://docs.aws.amazon.com/AWSSimpleQueueService/latest/SQSDeveloperGuide/ImportantIdentifiers.html[Amazon SQS Queue and Message Identifiers]. |  |
|======================

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
